# PAD

./: .gitignore  Dockerfile  README.md  analyse_report.txt  app.json  cap_vid.py  detect_face.py  docker-compose.yaml  head_movements.py  ia_pad.py  id_check.py  package-lock.json  package.json  requirements.txt
app/(tabs)/: _layout.tsx  index.tsx  result.tsx  upload.tsx
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
code test/: bg_check.py  cap_vid.py  detect_face.py  head_movements.py  id_check.py
components/result/: confidence-meter.tsx  result-card.tsx
components/ui/: button.tsx  card.tsx  progress-bar.tsx
components/upload/: upload-progress.tsx  upload-status.tsx
components/video/: directions-display.tsx  video-preview.tsx  video-recorder.tsx
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
ia_worker/: Dockerfile  ai_worker.py
my-app/: package-lock.json  package.json
